--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "lite-server": "^2.6.1",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "typescript": "^4.8.4",
     "yarn": "^1.22.19"
   }
