--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@types/connect-flash": "^0.0.37",
     "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
@@ -14,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "jquery": "^3.6.1",
     "lite-server": "^2.6.1",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
@@ -23,5 +25,13 @@
     "passport-local-mongoose": "^7.1.2",
     "typescript": "^4.8.4",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.11",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.1"
   }
 }
